[tool.poetry]
name = "data-science-2024"
version = "0.1.0"
description = ""
authors = ["obrunet <o.brunet@outlook.com>"]
readme = "README.md"
packages = [{include = "data_science_2024", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
shap = "^0.44.1"
lime = "^0.2.0.1"
seaborn = "^0.13.2"
plotly = "^5.18.0"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
catboost = "^1.2.2"
polars = "^0.20.7"
torch = "^2.2.0"
torchaudio = "^2.2.0"
torchvision = "^0.17.0"
transformers = "^4.37.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
coverage = "^7.4.1"
pre-commit = "^3.6.0"
scienceplots = "^2.1.1"
pytest = "^8.0.0"
pydantic = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Place here the default options for pytest
[tool.pytest.ini_options]
addopts = '''
--strict-config
--strict-markers
--cov=src
--cov-report=term-missing
'''
testpaths = "tests"

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "numpy.typing.mypy_plugin",
 ]
 ignore_missing_imports = true
 warn_redundant_casts = true
 warn_unused_ignores = false
 warn_return_any = true
 namespace_packages = true
 
 [tool.pydantic-mypy]
 init_forbid_extra = true
 init_typed = false
 warn_requred_dynamic_aliases = true
 warn_untype_fields = true
 
 [tool.ruff]
select = [
  "E",   # pycodestyle errors  
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "C90",   # mccabe code complexity
  #"N",   # PEP8 namine
  "ANN",   # flake8 annotations
  "S",   # flake8 bandit
  "B",   # flake8 bugbear
  "C4",   # flake8-comprehensions
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "PIE",   # flake8-pie
  "PYI",   # flake8-ûo
  "LOG",   # flake8-logging
  "Q",   # flake8-quotes
  "SIM",   # flake8-simplify
  "G",   # flake8-logging-format
  "ASYNC",   # flake8-async
  "PL",   # pyling
  "PD",   # pandas-vet
  "NPY",   # numpy-specific rules
  "ERA",   # eradicate
  "RUF",   # ruff-specific rules
  "PERF",   # perflint
  "FURB",   # refurb
  "UP",  # pyupgrade,
  "I",   # isort
]

target-version = "py310"
ignore = [] # a compléter
unfixable = ["B", "ERA"]
line-length = 120
preview true

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "EAR001"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tools.ruff.pylint]
max-args = 10

[tool.ruff.isort]
# ... a compléter

[tool.ruff.pyupgrade]
# ... a compléter
